django_projects/pimp/fixtures/projects/1/calibration_samples/POS/Beer_PoolB_full_f.mzXML
version https://git-lfs.github.com/spec/v1
oid sha256:82718a0c73b542b09e1816ec4562e124a22a741513ce126ef631d42c641fdcfe
size 21917877
